# Oryn

./: LICENSE  Market_Comparison.md  README.md  TASKS.md  TESTS.md  package.json  pnpm-lock.yaml
src/: App.tsx  app.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: history.rs  import.rs  lib.rs  main.rs  projects.rs  saved.rs  secrets.rs  vars.rs
src-tauri/tests/: http.rs
src/components/: CodeEditor.tsx  EnvironmentsPanel.tsx  ImportPanel.tsx  NewCollectionDialog.tsx  RefTooltip.tsx  RefValueHover.tsx  RequestBar.tsx  RequestSidebar.tsx  ResizeHandles.tsx  ResponsePanel.tsx  SecretsPanel.tsx  TextField.tsx  Titlebar.tsx  TitlebarControls.tsx  Toast.tsx  UrlInput.tsx  VarsPanel.tsx
src/lib/: refTokens.ts
