[package]
name = "oryn"
version = "0.1.1"
description = "Oryn is an open-source, local-first, zero-telemetry API client designed for privacy-conscious developers. It rejects the bloat of modern, cloud-dependent suites in favor of a curated, high-performance workflow that keeps your data strictly on your machine."
authors = ["João Ferro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oryn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1.52.3", features = ["sync", "macros"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

